# CPPEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Documentation/: README.md  Setup_Mac.md
Documentation/Engine/: Roadmap.md
Documentation/Engine/Overview/: NamingConventions.md
Documentation/Overview/: Changelog.md  NamingConventions.md  Roadmap.md
Documentation/Setup/vscode/: Mac.md  Windows.md
Source/: App.cpp
Source/Engine/: Engine.cpp  Engine.h
Source/Engine/Foundation/: String.cpp  String.h
Source/Engine/Framework/Math/: Core.h  Math.cpp  Math.h  Quaternion.cpp  Quaternion.h  Rotator.cpp  Vector.cpp  Vector.h  Vector2D.cpp
Source/Engine/Globals/: Engine.cpp  Engine.h
Source/Engine/Math/: Matrix.cpp  Matrix.h  Rotator.h  Transform.cpp  Transform.h  Vector2D.h
src/: main.cpp
